--- a/GeoQuiz/app/src/main/res/layout/activity_main.xml
+++ b/GeoQuiz/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,12 @@
     android:gravity="center"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:padding="24dp"
-        android:text="@string/question_text" />
+        android:text="@string/question_australia" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,7 +19,7 @@
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:text="@string/true_button" />
         <Button
             android:id="@+id/false_button"
@@ -25,4 +27,25 @@
             android:layout_height="wrap_content"
             android:text="@string/false_button" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/previous_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/arrow_left"
+            android:drawablePadding="4dp"
+            android:text="@string/previous_button" />
+
+        <Button android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/next_button"
+            android:drawableEnd="@drawable/arrow_right"
+            android:drawablePadding="4dp"/>
+    </LinearLayout>
+
 </LinearLayout>
